# GNU-Nix-ES

./: .gitignore  CONTRIBUTING.md  README.md  inject-revision.sh  main.sh  run.py  run.sh
.github/workflows/: main.yml
src/: run.sh
src/WIP-Work-In-Process/NYLUG-Graham-Christensen-dockerTools/: README.md  nix.nix
src/WIP-Work-In-Process/Nix Friday - Home manager/: README.md
src/WIP-Work-In-Process/NixOS-tests/: README.md
src/WIP-Work-In-Process/build-vm/: README.md
src/WIP-Work-In-Process/compiling-toybox-from-nixpkgs/: README.md  compiling-toybox-from-nixpkgs.nix  run.sh
src/WIP-Work-In-Process/danbst-python-minimal/: danbst-python-minimal.nix  run.sh
src/WIP-Work-In-Process/danbst-python-minimal-musl/: README.md  danbst-python-minimal-musl.nix  run.sh
src/WIP-Work-In-Process/docker-ssh/: Dockerfile  README.md  run.sh
src/WIP-Work-In-Process/docker-volumes-fixperms/: README.md  adduser_with_sudo_privileges.sh  run.sh  run_apt-get_update.sh
src/WIP-Work-In-Process/documentation-lnl7-nix-2.3.6/: run.sh  tweag-tutorial.sh  user-run.sh
src/WIP-Work-In-Process/ex-tweag-nix-in-flake/: run.sh
src/WIP-Work-In-Process/ex2-part-2-tweag/: README.md
src/WIP-Work-In-Process/ex3-part-3-tweag/: run.sh
src/WIP-Work-In-Process/ex5-flake-python-poetry2nix/: README.md  tweag-tutorial.sh
src/WIP-Work-In-Process/install/: README.md
src/WIP-Work-In-Process/install-flake/: README.md
src/WIP-Work-In-Process/install-flake/poetry2nix-flake-0/: flake.nix  prepare-poetry.sh  pyproject.toml  run.sh
src/WIP-Work-In-Process/kubernets/: README.md  podman-rootless-wrapper.sh  test_podman-rootless-wrapper.sh
src/WIP-Work-In-Process/lethalman-nix-user-chroot/: README.md
src/WIP-Work-In-Process/musl-compiling/: README.md
src/WIP-Work-In-Process/nix/labels/github_labels/: .gitignore  pyproject.toml  runner.py  shell.nix
src/WIP-Work-In-Process/nix/poetry2nix-nix-fryday-aux/: default.nix  pyproject.toml
src/broken/ex1-hello-tweag/: run.sh  (+1 more)
src/ex1-hello-tweag/: tweag-tutorial.sh
src/examples/ex-tweag-nix-in-flake/imgapp/: pyproject.toml
src/examples/nix/poetry2nix-nix-fryday-redo/: pyproject.toml
src/examples/nix/poetry2nix-nix-ready/: pyproject.toml
src/install/: README.md  install.sh  run.sh  test.sh
src/ready-to-development-languages-setup/: README.md
src/to-run-in-github-action/: check-run.sh  commit.sh  folder-name.txt  in-action.sh  inject-revision-and-folder-name.sh  inject-revision-and-folder-name2.sh  inject-revision.sh  move-to-examples.sh  test-in-action.sh
src/utils/: end-mensage.sh
(+957 files in other folders)
