[tool.poetry]
name = "nixfriday"
version = "0.1.0"
description = ""
authors = ["Pedro Regis"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
pytest = "^5.4.2"
django = "^3.0.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
nixfriday = "nixfriday:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
