[tool.poetry]
name = "imgapp"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
pillow = "^7.2.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
imgapp="imgapp:main"

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
