[tool.poetry]
name = "nixfriday"
version = "0.1.0"
description = ""
authors = ["Pedro Regis"]
license = "MIT"

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
nixfriday = "nixfriday:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
