[tool.poetry]
name = "nixfriday"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
nixfriday = "nixfriday:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
