[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
python-decouple = "^3.3"
pygithub = "^1.51"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
github_labels = "runner:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
